--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -231,7 +231,6 @@ object-fit: cover;
 .gallery_cards:hover::before{
     opacity: 0;
     transition: opacity 0.5s linear ;
-    
 }
 .gallery_cards:hover .shadow {
     animation: scale_search 0.7s infinite; 
@@ -269,4 +268,25 @@ object-fit: cover;
       100% {
         transform: scale(1);
       }   
+    }
+
+    /*-----------ABOUT-----------*/
+
+    .about_container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+        width: 100%;
+        height: 600px;
+        background-color: #334E60;
+    }
+    .background_photo{
+        width: 400px;
+        height: 400px;
+        background-color: #840032;
+    }
+    .about_titles{
+        width: 50%;
+        height: 400px;
     }
