--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,23 +22,7 @@ header{
     justify-content: flex-start;
     padding: 0 25px;
 }
-.logo_img{
-    width: 63px;
-    height: 63px;
-    margin-top: 20px;
-    border-radius: 50%;
-    border: 5px solid #840032;
-}
-.title_logo{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    height: 40px;
-    color: white;
-    margin-left: 20px;
-    text-shadow: -8px -5px 7px rgba(20, 40, 54, 0.84);
-}
+
 .header_nav{
     
     display: flex;
@@ -84,10 +68,10 @@ object-fit: cover;
 .banner{
     position: absolute;
     color: black;
-    top: 70%;
+    top: 40%;
     left: 8%;
     line-height: 2%;
-    color: rgba(197, 196, 196, 0.993);
+    color: white;
 }
 .banner_title{
     font-size: 45px;
@@ -111,6 +95,56 @@ object-fit: cover;
 
 }
 
+    /*-----------ABOUT-----------*/
+
+    .about_container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 300px;
+        width: 100%;
+        height: 760px;
+        background-color: #334E60;
+ 
+    }
+    .background_photo{
+        position: relative;
+        width: 400px;
+        height: 400px;
+        background-color: #840032;
+    }
+    .about_portrait{
+        position: absolute;
+        left: 17%;
+        top: 940px;
+    }
+    .portrait_img{
+        object-fit: cover;
+        width: 400px;
+        height: 400px;
+    }
+    .about_titles{
+        width: 30%;
+        height: 400px;
+        line-height: 1.1rem;
+        color: white;
+    }
+    .who_title{
+        font-size: 22px;
+        font-weight: bold;
+        margin-left: 20px;
+        line-height: 0.2rem;
+    }
+    .hello_title{
+        font-size: 36px;
+        font-weight: bold;
+        line-height: 0.2rem;
+    }
+    
+    .about_description{
+    font-size: 16px;
+    }
+
 /*-----------TECHNO-----------*/
 
 .techno{
@@ -120,7 +154,7 @@ object-fit: cover;
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: white;
+    background-color: #334E60;
 }
 .techno_title{
     z-index: 1;
@@ -128,7 +162,7 @@ object-fit: cover;
     height: 20px;
     font-size: 58px;
     font-weight: bold;
-    color: black;
+    color: white;
 }
 .techno_hr{
     position: absolute;
@@ -155,10 +189,11 @@ object-fit: cover;
     justify-content: flex-start;
     width: 150px;
     height: 200px;
-    background-color: white;
+    background-color: #840032;
     border-radius: 15px;
     -webkit-box-shadow: 0px 3px 26px 2px #840032; 
     box-shadow: 0px 3px 26px 2px #0f0106;
+    margin-bottom: 100px;
 }
 .techno_card:hover{
     box-shadow: 0px 3px 26px 2px #840032;
@@ -173,7 +208,7 @@ object-fit: cover;
     bottom: 5px;
     font-size: 28px;
     font-weight: 800;
-    color: #840032;
+    color: white;
 }
 
 /*-----------WORKS-----------*/
@@ -184,6 +219,7 @@ object-fit: cover;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 .works_title{
     z-index: 1;
@@ -270,23 +306,3 @@ object-fit: cover;
       }   
     }
 
-    /*-----------ABOUT-----------*/
-
-    .about_container{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-        width: 100%;
-        height: 600px;
-        background-color: #334E60;
-    }
-    .background_photo{
-        width: 400px;
-        height: 400px;
-        background-color: #840032;
-    }
-    .about_titles{
-        width: 50%;
-        height: 400px;
-    }
