--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,7 +105,6 @@ object-fit: cover;
         width: 100%;
         height: 760px;
         background-color: #334E60;
- 
     }
     .background_photo{
         position: relative;
@@ -211,6 +210,80 @@ object-fit: cover;
     color: white;
 }
 
+/*-----------Modal-----------*/
+
+.inactive{
+    display: none;
+}
+.active_background{
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 998;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #334E60;
+}
+.modal_content{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    max-width: 600px;
+    width: calc(100% - 40%);
+    height: auto;
+    background-color: white;
+    border-radius: 25px;
+    overflow: hidden;
+}
+.modal_close{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+.title_modal{
+    width: 100%;
+    height: 25px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.go_to{
+    width: 310px;
+    height: 220px;
+    cursor: pointer;
+}
+.modal_picture_content{
+    margin-bottom: 10px;
+    border: 1px solid #840032;
+}
+.modal_img{
+    width: 310px;
+    height: 220px;
+}
+.description{
+    width: calc(100% - 20%);
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+.skills{
+    width: calc(100% - 10%);
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+.go_to{
+
+}
 /*-----------WORKS-----------*/
 
 .works{
@@ -306,3 +379,11 @@ object-fit: cover;
       }   
     }
 
+/*-----------CONTACT-----------*/
+
+.contact_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
