--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -101,16 +101,16 @@ header{
     /*-----------ABOUT-----------*/
 
     .about_container{
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 300px;
+        gap: calc(360px - 5%);
         width: 100%;
         height: 760px;
         background-color: #334E60;
     }
     .background_photo{
-        position: relative;
         max-width: 400px;
         max-height: 400px;
         width: 100%;
@@ -121,9 +121,8 @@ header{
     }
     .about_portrait{
         position: absolute;
-        left: 22%;
-        top: 78%;
- 
+        left: 16%;
+        top: 20%;
     }
     .portrait_img{
         object-fit: cover;
@@ -503,8 +502,8 @@ header{
         height: calc(750px - 25%);
     }
     .about_portrait{
-        left: 14%;
-        top: 96%;
+        left: 12%;
+        top: 20%;
     }
 }
 @media screen and (max-width:1024px){
@@ -541,7 +540,7 @@ header{
     }
     .about_portrait{
         left: 9%;
-        top: 80%;
+        top: 20%;
     }
     .gallery{
         grid-column-gap: 67px;
@@ -565,7 +564,7 @@ header{
     }
     .about_portrait{
         left: 16%;
-        top: 83%;
+        top: 25%;
     }
     .about_description{
         font-size: 14px;
@@ -582,15 +581,14 @@ header{
         gap: calc(130px - 25px);
     }
     .about_portrait{
-        left: calc(11% - 1%);
-        top: 100%;
+        left: calc(10% - 1%);
+        top: 25%;
     }
 }
 
 
 @media screen and (max-width:769px){
     .about_portrait{
-        top: 88%;
         left:10%;
     }
     .gallery{
@@ -630,7 +628,7 @@ header{
 }
     .about_portrait{
     left: calc(11% - 1%);
-    top: 88%;
+
 }
     .about_description{
     font-size: 12px;
@@ -655,7 +653,7 @@ header{
     }
     .about_portrait{
         left: 30%;
-        top: 89%;
+        top: 5%;
     }
     .nav_link_content{
         gap: 15px;
@@ -697,7 +695,6 @@ header{
 @media screen and (max-width:476px){
     .about_portrait{
         left: 25%;
-        top: 57%;
     }
     .gallery_cards{
         display: flex;
@@ -714,7 +711,6 @@ header{
     }
     .about_portrait{
         left: 27%;
-        top: 54%;
     }
     .modal_img{
         width: 150px;
@@ -727,7 +723,6 @@ header{
 @media screen and (max-width:376px){
     .about_portrait{
         left: 20%;
-        top: 54%;
     }
     .techno_container{
         gap: 20px;
@@ -744,7 +739,6 @@ header{
     }
     .about_portrait{
         left: 15%;
-        top: 55%;
     }
     .who_title{
         font-size: 18px;
