--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -104,13 +104,15 @@ header{
         position: relative;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         gap: calc(360px - 5%);
         width: 100%;
         height: 760px;
         background-color: #334E60;
     }
     .background_photo{
+        position: absolute;
+        left: 14%;
         max-width: 400px;
         max-height: 400px;
         width: 100%;
@@ -132,6 +134,8 @@ header{
         box-shadow: -3px 13px 20px 0px rgba(0,0,0,0.83);
     }
     .about_titles{
+        position: absolute;
+        right: 250px;
         width: 30%;
         height: 400px;
         line-height: 1.1rem;
@@ -151,8 +155,10 @@ header{
         line-height: 0.2rem;
     }
     
-    .about_description{
+    .about_description{ 
     font-size: 16px;
+    line-height: 1.2rem;
+
     }
 
 /*-----------TECHNO-----------*/
@@ -501,9 +507,20 @@ header{
     .me_img{
         height: calc(750px - 25%);
     }
+    .about_titles{
+        right: calc(250px - 50px);
+    }
+    .background_photo{
+        left: 10%;
+    }
     .about_portrait{
         left: 12%;
         top: 20%;
+    }
+}
+@media screen and (max-width:1240px){
+    .about_titles{
+        right: calc(200px - 50px);
     }
 }
 @media screen and (max-width:1024px){
@@ -535,8 +552,14 @@ header{
     .job{
         font-size: calc(30px - 15px);
     }
+    .about_titles{
+        right: calc(150px - 50px);
+    }
     .about_container{
         gap: 210px;
+    }
+    .background_photo{
+        left: 7%;
     }
     .about_portrait{
         left: 9%;
@@ -562,6 +585,12 @@ header{
         width: 300px;
         height: 300px;
     }
+    .about_titles{
+        right: calc(100px - 50px);
+    }
+    .background_photo{
+        left: 12%;
+    }
     .about_portrait{
         left: 16%;
         top: 25%;
@@ -577,9 +606,6 @@ header{
     }
 }
 @media screen and (max-width:715px){
-    .about_container{
-        gap: calc(130px - 25px);
-    }
     .about_portrait{
         left: calc(10% - 1%);
         top: 25%;
@@ -600,6 +626,12 @@ header{
     }
     .gallery_cards{
         min-height: 270px;
+    }
+    .about_titles{
+        right: 30px;
+    }
+    .background_photo{
+        left: 5%;
     }
 }
 @media screen and (max-width:634px){
@@ -626,9 +658,8 @@ header{
     width: 250px;
     height: 250px;
 }
-    .about_portrait{
-    left: calc(11% - 1%);
-
+    .background_photo{
+    top: 28%;
 }
     .about_description{
     font-size: 12px;
@@ -647,13 +678,25 @@ header{
     .banner{
         z-index: 5;
     }
+    .about_titles{
+        justify-content: center;
+        align-items: flex-end;
+        right: 20%;
+        width: 250px;
+    }
     .about_container{
         flex-direction: column;
-        gap: 0px;
+    }
+    .background_photo{
+        top: 8%;
+        left: 25%;
     }
     .about_portrait{
         left: 30%;
         top: 5%;
+    }
+    .about_description{
+        
     }
     .nav_link_content{
         gap: 15px;
